<resources>
    <string name="app_name">City Groom</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="blank">        </string>

    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="pwd_label">Password</string>
    <string name="confpwd_label">Confirm Password</string>

    <string name="starttrip">Start your trip</string>
    <string name="roadconditions">View Road Conditions</string>

    <string name="reset_pwd">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="contactus">Contact Us</string>

    <string name="category">Category :</string>
    <string name="description">Description :</string>
    <string name="addimage">Add Image</string>
    <string name="go">Go</string>
    <string name="length">Length :</string>
    <string name="width">Width :</string>
    <string name="area">Area :</string>
    <string name="severity">Severity :</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>

    <string name="status">Status : Lodged</string>

    <string name="date">Date :</string>

    <string name="description_hint"> Please enter the complete description of the complaint. Also enter the nearby landmarks. </string>

    <string-array name="issues_menu">
        <item>Potholes</item>
        <item>Cracks</item>
        <item>Pavements</item>
        <item>Manholes</item>
        <item>Drainage</item>
        <item>Obstructions</item>
        <item>Guardrail</item>
        <item>Street Signs</item>
        <item>Street Lights</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_road_conditions">Map</string>
    <string name="title_activity_maps_test">Map</string>
</resources>
